# celery-worker

./: Dockerfile  README.md  docker-compose.yml  env.example  format.sh  pyproject.toml  worker.py
app/: __init__.py  celery_config.py  config.py  tasks.py
