[project]
name = "celery-worker-template"
version = "1.0.0"
description = "Production-ready Celery worker with example tasks, retry logic, and error handling"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.6.0",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
